--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<section>
       <h2>Broj telefona: +381 64 045 40 37</h2>
-      <img src='broj.png' id="broj">
+      <img src='Broj telefona.png' id="broj">
     </section>
     <section>
         <h2>Jezici</h2>
