--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 	
 	<section>
-      <h2>Broj telefona: +381 64 045 40 37</h2>
+      <h2>Telefon: +381 64 045 40 37</h2>
       <img src='Broj telefona.png' id="broj">
     </section>
     <section>
