--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </section>
 	
 	<section>
-      <h2>Telefon: +381 64 045 40 37</h2>
+		<p></p>
+      <h2>Telefon: <a href="tel:+381640454037">+381 64 04 54 037</a></h2>
       <img src='Broj telefona.png' id="broj">
     </section>
     <section>
