--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<section>
 		<p></p>
       <h2>Telefon: <a href="tel:+381640454037">+381 64 04 54 037</a></h2>
-      <img src='Broj telefona.png' id="broj">
     </section>
     <section>
         <h2>Jezici</h2>
@@ -38,7 +37,7 @@
             <li>Petlje (while/for/foreach)</li>
             <li>Funkcije i lambda</li>
           	<li>Rekurzija</li>
-            <li>OOP (Polimorfizam, abstrakcija, nasledjivanje, enkapsulacija)</li>
+            <li>OOP (Polimorfizam, apstrakcija, nasledjivanje, enkapsulacija)</li>
           	<li>Design paterns</li>
             <li>Dizajn i rad sa bazama podataka</li>
           	<li>Algoritmi i strukture podataka</li>
