--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </section>
 	
 	<section>
-		<p></p>
-      <h2>Telefon: <a href="tel:+381640454037">+381 64 04 54 037</a></h2>
+		<h2>Kontakti</h2>
+      	<p>Telefon: <a href="tel:+381640454037">+381 64 04 54 037</a></p>
+	<p><a href="viber://chat?number=+381640454037">Viber poruka</a></p>
+	<p><a href="https://wa.me/381640454037" target="_blank">Whatsapp poruka</a></p>
     </section>
     <section>
         <h2>Jezici</h2>
